fixed list gap

--- a/css/styles.css
+++ b/css/styles.css
@@ -142,7 +142,7 @@ section {
 
 .section-content ul {
     align-self: center;
-    gap: 10em;
+    gap: 1em;
     column-count: 2;
     margin-top: 0.5rem;
     margin-bottom: 0;
